--- a/index.html
+++ b/index.html
@@ -240,8 +240,18 @@
       </div>
       <h1>Tic Tac Toe</h1>
       <div class="game-modes">
-        <a href="game.html" class="mode-button">Normal Mode</a>
-        <a href="advanced.html" class="mode-button advanced">Advanced Mode</a>
+        <a href="game.html" class="game-mode-btn">
+          <i class="fas fa-users"></i>
+          <span>Standard Mode</span>
+        </a>
+        <a href="advanced.html" class="game-mode-btn">
+          <i class="fas fa-star"></i>
+          <span>Advanced Mode</span>
+        </a>
+        <a href="bot.html" class="game-mode-btn">
+          <i class="fas fa-robot"></i>
+          <span>Bot Mode</span>
+        </a>
       </div>
     </div>
   </body>
