Revert "bot modified"
This reverts commit 64e91adbdcbbbf09a09db88b259889fe0ff43c52.

--- a/index.html
+++ b/index.html
@@ -84,14 +84,6 @@
         box-shadow: 0 5px 15px rgba(52, 152, 219, 0.3);
       }
 
-      .mode-button.bot {
-        background: linear-gradient(to right, #e74c3c, #c0392b);
-      }
-
-      .mode-button.bot:hover {
-        box-shadow: 0 5px 15px rgba(231, 76, 60, 0.3);
-      }
-
       /* Responsive styles */
       @media screen and (max-width: 480px) {
         .container {
@@ -248,15 +240,15 @@
       </div>
       <h1>Tic Tac Toe</h1>
       <div class="game-modes">
-        <a href="game.html" class="mode-button">
+        <a href="game.html" class="game-mode-btn">
           <i class="fas fa-users"></i>
           <span>Standard Mode</span>
         </a>
-        <a href="advanced.html" class="mode-button advanced">
+        <a href="advanced.html" class="game-mode-btn">
           <i class="fas fa-star"></i>
           <span>Advanced Mode</span>
         </a>
-        <a href="bot.html" class="mode-button bot">
+        <a href="bot.html" class="game-mode-btn">
           <i class="fas fa-robot"></i>
           <span>Bot Mode</span>
         </a>
